--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,7 @@
     <div class="left-navbar">
         <a href="/dashboard" class="button-left-nav" role="button" aria-pressed="true">Home</a>
         <a href="/explore" class="button-left-nav" role="button" aria-pressed="true">Explore</a>
-        <a href="/messages" class="button-left-nav" role="button" aria-pressed="true">Massages</a>
+        <a href="/messages" class="button-left-nav" role="button" aria-pressed="true">Messages</a>
         <a href="/bookmarks" class="button-left-nav" role="button" aria-pressed="true">Bookmarks</a>
     </div>
     <div class="left-bottom-section">
@@ -30,7 +30,7 @@
             <div class="top-composer-text">
 
                 <form method="get" action="/compose" class="top-text-header-par" >
-                    <textarea name="" class="text-top-header" placeholder="Dear Diary..."></textarea>
+                    <textarea name="preContent" class="text-top-header" placeholder="Dear Diary..."></textarea>
                     <button type="submit" class="compose-button-top" >Compose </button>
                 </form>
             </div>
