--- a/views/viewPage.ejs
+++ b/views/viewPage.ejs
@@ -5,8 +5,7 @@
     <button type="submit"  >Dashboard</button>
 </form>
 <hr>
-
-
+<a href="/editPage/<%= page._id %>">Edit Page</a>
 <div class = "mid-body">
         <h2> <%= descriptionOfDairy %></h2>
     <hr>
