--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
 </div>
 
 <div class="cont-tp">
-  <h1>Login</h1>
+  <h1>Register</h1>
   <div class="card-tp">
     <form action="/register" method="POST">
       <div class="unt-inp">
@@ -15,7 +15,7 @@
         <label for="password"  class="unt-lbl">Password</label>
         <input type="password" class="unt-inp" name="password"/>
       </div>
-      <button type="submit" class="button-a but-tp">Login</button>
+      <button type="submit" class="button-a but-tp">Register</button>
     </form>
   </div>
 </div>
