--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,45 @@ body {
     width: 30%;
     left: 0;
 }
+.button-a {
+    color: #20bf6b !important;
+    font-size: 1.2rem;
+    text-align: center;
+    text-decoration: none;
+    background: #ffffff;
+    border: 4px solid #20bf6b !important;
+    border-radius: 6px;
+}
+.button-a:hover {
+    color: #494949 !important;
+    border-radius: 50px;
+    border-color: #494949 !important;
+    transition: all 0.3s ease 0s;
+}
+.p-d-but{
+    margin: 10px auto 10px auto;
+    width : 200px;
+}
+.p-d-sta {
+    padding-left: 10%;
+    font-size : 2rem;
+}
+.p-d-info{
+    display: block;
+    text-align: center;
+}
+.gtp-add-f-but{
+    display: inline-block;
+    position: absolute;
+    right: 50px;
+    top: 50px;
+}
+.gtp-name {
+    display: inline;
+    position: relative;
+    bottom: 60px;
+    color:  #20bf6b;
+}
 .main-icon {
     font-size: 3rem;
     color: #20bf6b;
@@ -87,7 +126,7 @@ body {
 
 .user-name-pic{
     position: relative;
-    /*bottom: 50px;*/
+    bottom: 50px;
     color: #20bf6b !important;
     font-size: 1.2rem;
     text-align: center;
@@ -102,7 +141,7 @@ body {
 .top-header-write {
     display: block;
     /*width: 100%;*/
-    padding-top: 90px;
+    padding-top: 80px;
 }
 .top-composer-text {
     /*text-align: center;*/
@@ -115,8 +154,7 @@ body {
     margin: 40px auto;
     /*display: inline-block;*/
     position: relative;
-    bottom: 90px;
-    left: 10px;
+    bottom: 85px;
     /*left: 250px;*/
     color: #20bf6b !important;
     font-size: 1rem;
@@ -137,7 +175,7 @@ body {
 }
 .text-top-header {
     height: 100px;
-    width: 106%;
+    width: 100%;
     font-size: 1rem;
     padding: 5px;
     text-decoration: none;
@@ -158,14 +196,14 @@ body {
     width: 80px;
     display: inline-block;
     position: relative;
-    bottom: 110px;
+    bottom: 80px;
     border-radius: 50px;
     border: 4px solid #20bf6b !important;
     border-color: #20bf6b !important;
     margin: 3%;
 }
 .card-to-show {
-    margin: 20px 0 20px 0;
+    margin: 40px 0 0 0;
 }
 .img-thumbnail-card {
     height: 50px;
@@ -173,16 +211,19 @@ body {
     border-radius: 50px;
     border: 1px solid #20bf6b !important;
     border-color: #20bf6b !important;
-    margin: 0 0 5px 0;
+    margin: 0;
 }
 .user-name-card {
     display: inline-block;
     position: relative;
-    /*bottom: px;*/
-    color: #20bf6b;
+    bottom: 20px;
     font-size: 1rem;
     font-weight: 600;
+    color: #20bf6b;
     padding-left: 10px;
+}
+.form-in {
+    display: inline;
 }
 .card-header-show {
     padding-top: 1%;
@@ -240,12 +281,20 @@ body {
 .card-footer {
     text-align: center;
 }
-
+.p-m-but {
+    margin: 50px;
+    height: 50px;
+    width: 150px;
+}
 .icon-footer {
+    color: #20bf6b;
     text-decoration: none;
     background: #ffffff;
-    border: none;
-    color: #20bf6b;
+    border: 0;
+}
+.num-likes {
+    position: absolute;
+    left: 15%;
 }
 .icon-footer:hover {
     color : #494949 ;
@@ -260,10 +309,6 @@ body {
 .icon-bookmark {
     position: absolute;
     right: 10%;
-}
-.num-likes {
-    position: absolute;
-    left: 15%;
 }
 
 .notice-icon {
@@ -313,51 +358,7 @@ body {
     right: 30px;
     height: 30px;
     width: 70px;
-}
-.form-in {
-    display: inline;
-}
-.gtp-name {
-    display: inline;
-    position: relative;
-    color:  #20bf6b;
-}
-
-.button-a {
-    color: #20bf6b !important;
-    font-size: 1.2rem;
-    text-align: center;
-    text-decoration: none;
-    background: #ffffff;
-    border: 4px solid #20bf6b !important;
-    border-radius: 6px;
-}
-.button-a:hover {
-    color: #494949 !important;
-    border-radius: 50px;
-    border-color: #494949 !important;
-    transition: all 0.3s ease 0s;
-}
-.p-d-but{
-    margin: 10px auto 10px auto;
-    width : 200px;
-}
-.p-d-sta {
-    padding-left: 10%;
-    font-size : 2rem;
-}
-.p-d-info{
-    display: block;
-    text-align: center;
-}
-.gtp-add-f-but{
-    display: inline-block;
-    position: absolute;
-    right: 50px;
-    top: 50px;
-}
-.p-m-but {
-    margin: 50px;
+    border: 2px;
 }
 
 .cont-tp {
@@ -380,7 +381,12 @@ body {
     width: 140px;
     margin: 2% 40%;
 }
-
+.but-wl {
+    display: inline-block;
+    height: 50px;
+    width: 140px;
+    /*margin: 2% 5% 2% 5%;*/
+}
 .unt-inp:focus {
     outline-width: 0;
 }
@@ -395,9 +401,7 @@ body {
     margin: 5% 5% 5% 5%;
 }
 .wel-msg-2 {
-    /*display: inline-block;*/
-    /*padding-left: 40%;*/
-    margin: 5% auto;
+    display: block;
     text-align: center;
     font-size: 1.5rem;
 }
@@ -406,7 +410,134 @@ body {
     text-align: center;
 }
 
+.msg-desc {
+    position: absolute;
+    right: 3%;
+    top: 50px;
+}
+
+.d-v-h3 {
+    padding-left: 10%;
+
+}
+.dairy-pages {
+    display: inline-block;
+    text-align: center;
+    width : 50%;
+    margin: 3% auto 3% auto;
+}
+.dairy-pages-3 {
+    display: block;
+    text-align: center;
+}
+.dairy-table {
+    border-collapse: collapse;
+    border: 1px solid black;
+    table-layout: fixed;
+    width: 100%;
+    white-space: nowrap;
+}
+.dairy-table td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.dt-i {
+    width: 15%;
+}
+.dt-h {
+    color: #20bf6b !important;
+    font-size: 1.2rem;
+    text-align: center;
+    text-decoration: none;
+    background: #ffffff;
+}
+.dt-b-a {
+    color: #20bf6b !important;
+    text-decoration: none;
+}
+.dt-b-a:hover {
+    color: #494949 !important;
+}
+.dvf-1 {
+    top: 20px;
+}
+table, td, th {
+    padding-top : 10px;
+    padding-bottom: 5px;
+    border: 1px solid black;
+}
+
+
+.fa-check {
+    color: #20bf6b;
+}
+.fa-times {
+    color: #494949;
+}
+.dv-f-d {
+    text-align: center;
+}
+.dv-f-p {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.folo-d{
+    display: inline-block;
+    width : 600px;
+}
+.fr-nm{
+    display: inline-block;
+    width: 100px;
+    font-size: 1.2rem;
+    margin: 10px 20px 10px 20px;
+}
+
+.dv-b {
+    display: inline-block;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
 .but-wl {
     height: 50px;
     width: 140px;
+}
+
+.main-icon-left {
+    font-size: 3rem;
+    color: #20bf6b;
+    padding-top: 1rem ;
+    padding-left: 2rem; 
+    margin-left: 0;  
+}
+
+.dt-x {
+    width: 35%
+}
+.ga-ex-mt {
+    margin-top: 3%;
+
+}
+.ex-cent {
+    margin-left: 30%;
+}
+.p-bottom {
+    margin-top: 5%;
+    height: 2px;
+    margin-bottom: 0;
+    border-width:0;
+    background-color: #20bf6b;
+}
+
+.bu-d-l {
+    height: 60px;
+    width: 250px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.fr-nm2 {
+    width: 300px; 
 }
