--- a/views/editPage.ejs
+++ b/views/editPage.ejs
@@ -18,10 +18,11 @@
             <form class="" action="/editPage" method="post">
             <input hidden value="<%= pageId %>" name="pageId">
             <label for="Cotent" >Edit page here</label>
-            <textarea name="content" id="Content" class="form-control" rows="10" cols="80"><%= content %></textarea>
+                <textarea name="content" id="Content" class="form-control" rows="30" cols="40"><%= content %></textarea>
             <br>
             <button type="submit" class="btn btn-lg btn-success" name="button">Edit</button>
         </form>
     </div>
 </div>
+<script>tinymce.init({selector:'textarea'});</script>
 <%- include('partials/footer') %>
