--- a/views/newDiary.ejs
+++ b/views/newDiary.ejs
@@ -13,11 +13,12 @@
             <label for="title">Diary Name</label>
             <input type="text" id="title" class="form-control" name="diaryName" value="">
             <label for="Cotent" >Content</label>
-            <textarea name="content" id="Content" class="form-control" rows="10" cols="80"></textarea>
+            <textarea name="content" id="Content" class="form-control" rows="30" cols="10"></textarea>
             <br>
             <button type="submit" class="btn btn-lg btn-success" name="button">Write</button>
         </form>
     </div>
 </div>
+<script>tinymce.init({selector:'textarea'});</script>
 
 <%- include('partials/footer') %>
