--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
 <div class="cont-tp">
   <h1>Register</h1>
   <div class="card-tp">
-    <form action="/register" method="POST">
+    <form action="/register" method="POST" enctype="multipart/form-data">
       <div class="unt-inp">
         <label for="username" class="unt-lbl">UserName</label>
         <input type="text" class="unt-inp" name="username">
@@ -15,7 +15,11 @@
         <label for="password"  class="unt-lbl">Password</label>
         <input type="password" class="unt-inp" name="password"/>
       </div>
-      <button type="submit" class="button-a but-tp">Register</button>
+      <div class="unt-inp">
+        <label for="photo"  class="unt-lbl">upload a photo</label>
+        <input class="unt-inp" type="file"  name="photo" > </input>
+      </div>
+      <input type="submit" class="button-a but-tp">
     </form>
   </div>
 </div>
