--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -47,7 +47,7 @@
             </div>
             <hr class="card-seperator">
             <div class="card-body-show">
-                <p><%= page.content%></p>
+                <%= page.content%>
             </div>
             <hr class="card-seperator">
             <div class="card-footer-show" id="<%= page.author_name%>">
