--- a/views/editPage.ejs
+++ b/views/editPage.ejs
@@ -1,28 +1,23 @@
 <%- include('partials/header') %>
 
-<form action="/dashboard" method="get">
-    <button type="submit" >Dashboard</button>
+
+<form action="/dashboard" method="get" >
+    <button type="submit" class="button-a dv-b" >Home</button>
 </form>
 
-<hr>
-<h3 class="title"> author: <%= authorId %> </h3>
-<h3>owner: <%= ownerId %> </h3>
-<h3><%= diaryId %></h3>
-<h3><%= pageId %></h3>
-<hr>
+<h1 class="wel-msg"> <a href="/getProfile/<%=page.auther_id%>" class="dt-b-a">Welcome to <%= page.author_name %>'s page </a> </h1>
+<hr class="hr-profile-dash-board" />
 
-
-
-<div class="container">
-    <div class="jumbotron centered">
-            <form class="" action="/editPage" method="post">
-            <input hidden value="<%= pageId %>" name="pageId">
-            <label for="Cotent" >Edit page here</label>
-                <textarea name="content" id="Content" class="form-control" rows="30" cols="40"><%= content %></textarea>
-            <br>
-            <button type="submit" class="btn btn-lg btn-success" name="button">Edit</button>
-        </form>
-    </div>
+<div class="editor-compose" >
+    <form class="" action="/editPage" method="post">
+        <input hidden value="<%= page.id %>" name="pageId">
+        <div class="editor-text">
+        <textarea name="content" id="Content" class="form-control" rows="30" cols="40"><%= page.content %></textarea>
+            <br/>
+        </div>
+        <button type="submit" class="button-a but-tp" name="button"> Submit </button>
+    </form>
 </div>
+
 <script>tinymce.init({selector:'textarea'});</script>
 <%- include('partials/footer') %>
