--- a/views/newDiary.ejs
+++ b/views/newDiary.ejs
@@ -1,24 +1,32 @@
 <%- include('partials/header') %>
 
-<form action="/dashboard" method="get">
-    <button type="submit"  >Dashboard</button>
+<form action="/dashboard" method="get" class="gtp-add-f-but dvf-1">
+    <button type="submit" class="button-a" >Home</button>
 </form>
-<hr>
 
-<h1 style="margin: 2% auto 5% 15%"> author : <%= name %> </h1>
+<div class="main-icon">
+    <span><i class="fas fa-book-open"></i></span>
+</div>
+<hr class="hr-profile-dash-board">
 
-<div class="container">
-    <div class="jumbotron centered">
+<div class="cont-tp">
+    <h1>Create New Diary : </h1>
+    <div class="card-tp">
         <form class="" action="/newDiary" method="post">
-            <label for="title">Diary Name</label>
-            <input type="text" id="title" class="form-control" name="diaryName" value="">
-            <label for="Cotent" >Content</label>
-            <textarea name="content" id="Content" class="form-control" rows="30" cols="10"></textarea>
-            <br>
-            <button type="submit" class="btn btn-lg btn-success" name="button">Write</button>
+            <div class="unt-inp">
+                <label for="title" class="unt-lbl" >Dairy Name : </label>
+                <input type="text" id="title" class="unt-inp"  name="diaryName" value="">
+            </div>
+            <div class="unt-inp">
+                <label for="title" class="unt-lbl" > Keep it private : </label>
+                <input type="checkbox" name="isPrivate" value="" class="ex-cent" >
+            </div>
+            <button type="submit" class="button-a but-tp" name="button">Submit</button>
         </form>
     </div>
+    <div class="editor-compose">
+        <p class="form-in-f-3">Note : You cannot make a dairy private from public. </p>
+    </div>
 </div>
-<script>tinymce.init({selector:'textarea'});</script>
 
 <%- include('partials/footer') %>
