--- a/views/viewPage.ejs
+++ b/views/viewPage.ejs
@@ -20,7 +20,7 @@
         </div>
         <hr class="card-seperator">
         <div class="card-body-show">
-            <%= page.content%>
+            <%- page.content%>
         </div>
         <hr class="card-seperator">
         <% if (page.isPrivate === false) {%>
