front end is completed

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <hr class="hr-profile-dash-board">
+    <hr class="hr-profile-dash-board hr-dsi">
 
     <div>
         <% pages.forEach((page) => { %>
