--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,7 @@
     <div class="left-navbar">
         <a href="/dashboard" class="button-left-nav" role="button" aria-pressed="true">Home</a>
         <a href="/explore" class="button-left-nav" role="button" aria-pressed="true">Explore</a>
-        <a href="/messages" class="button-left-nav" role="button" aria-pressed="true">Messages</a>
+<!--        <a href="/messages" class="button-left-nav" role="button" aria-pressed="true">Messages</a>-->
         <a href="/bookmarks" class="button-left-nav" role="button" aria-pressed="true">Bookmarks</a>
     </div>
     <div class="left-bottom-section">
@@ -57,7 +57,7 @@
                 <span id="<%= page.id%>">
                     <button class="like-button icon-like icon-footer"  type="submit" ><i class="far fa-heart"></i></button>
                     <span class="icon-footer num-likes"><sup><%= page.likes %></sup></span>
-                    <button type="submit" class="icon-comment icon-footer" > <i class="far fa-comment"></i></button>
+<!--                    <button type="submit" class="icon-comment icon-footer" > <i class="far fa-comment"></i></button>-->
 
                     <button type="submit" class="add-to-bookmark-button icon-bookmark icon-footer"> <i class="far fa-bookmark"></i></button>
                 </span>
