--- a/views/viewPage.ejs
+++ b/views/viewPage.ejs
@@ -28,7 +28,7 @@
                 <span id="<%= page.id%>">
                     <button class="like-button icon-like icon-footer"  type="submit" ><i class="far fa-heart"></i></button>
                     <span class="icon-footer num-likes"><sup><%= page.likes %></sup></span>
-                    <button type="submit" class="icon-comment icon-footer" > <i class="far fa-comment"></i></button>
+<!--                    <button type="submit" class="icon-comment icon-footer" > <i class="far fa-comment"></i></button>-->
                     <button type="submit" class="add-to-bookmark-button icon-bookmark icon-footer"> <i class="far fa-bookmark"></i></button>
                 </span>
             </div>
